tests/ui/nll/issue-54779-anon-static-lifetime.stderr
error: lifetime may not live long enough
  --> $DIR/issue-54779-anon-static-lifetime.rs:32:24
   |
LL |         cx: &dyn DebugContext,
   |             - let's call the lifetime of this reference `'1`
...
LL |         bar.debug_with(cx);
   |                        ^^ cast requires that `'1` must outlive `'static`

error: aborting due to previous error

